--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "description": "A pack for API Platform",
   "require": {
     "php": "^7.0",
-    "api-platform/core": "^2.1",
+    "kumulo/apiplatform-core": "dev",
     "doctrine/annotations": "^1.0",
     "doctrine/orm": "^2.4.5",
     "doctrine/doctrine-bundle": "^1.6",
